syntax = "proto3";

package event;

import "message.proto";
import "google/api/annotations.proto";

option go_package = "../protobuf";

service EventService {
  rpc CreateEvent (CreateEventRequest) returns (CreateEventResponse) {
    option (google.api.http) = {
      post: "/api/eventService/v1/event/create"
      body: "*"
    };
  }
  rpc UpdateEvent (UpdateEventRequest) returns (UpdateEventResponse) {
    option (google.api.http) = {
      post: "/api/eventService/v1/event/update"
      body: "*"
    };
  }
  rpc DeleteEvent (DeleteEventRequest) returns (DeleteEventResponse) {
    option (google.api.http) = {
      post: "/api/eventService/v1/event/delete"
      body: "*"
    };
  }
  rpc GetEventList (GetEventListRequest) returns (GetEventListEventResponse) {
    option (google.api.http) = {
      post: "/api/eventService/v1/event/get"
      body: "*"
    };
  }
}


